# CMIP6_multimodel_hydroclimate

./: .gitignore  README.md  config.yaml  hydroshare_README.md  pyproject.toml  requirements.txt
data/final/csv/: README.md  cannonsville__ACCESS-CM2_ssp245_r1i1p1f1_DBCCA_Daymet.csv  cannonsville__ACCESS-CM2_ssp370_r1i1p1f1_DBCCA_Daymet.csv  cannonsville__DaymetV4.csv  cannonsville__Livneh.csv
figures/diagnostics/: 01_quantile_shift.txt  02_wet_day_decomp.txt  03_spell_survival.txt  04_annual_maxima_ranked.txt  05_ar1_spectra.txt  06_snow_and_trend_maps.txt  07_compound_hot_dry.txt  08_cross_obs_qq.txt  09_handoff_continuity.txt  10_wasserstein_clustermap.txt
scripts/: 00_globus_authorize.py  00_globus_verify.py  01_compute_weights.py  02_smoke_test.py  03_download_bulk.py  04_aggregate_mpi.py  05_export_node_csv.py  05_make_figures.py  06_join_streamflow.py  06_make_diagnostics.py  07_export_node_csv.py
scripts/diagnostics/: 01_make_figures.py  02_make_diagnostics.py  03_validate_streamflow_join.py
slurm/: aggregate.sbatch  aggregate_groupA.sbatch  aggregate_groupB.sbatch  download.sbatch  smoke.sbatch
src/cmip6_drb/: __init__.py  aggregate.py  config.py  diagnostics.py  globus_client.py  http_client.py  io.py  manifest.py  mpi_runner.py  paths.py  state.py  streamflow.py  styling.py  weights.py
tests/: test_aggregate.py  test_diagnostics.py  test_io.py  test_weights.py
